2005-06-05  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp:
	* src/totem-mozilla-scriptable.h:
	* src/totem-mozilla-viewer.c: (main): Fix compilation on 64 bits
	machines with gcc4 (patch from Christian Persch  <chpe@cvs.gnome.org>)
	(Closes: #306283)

2006-06-04  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "gl" to ALL_LINGUAS.

2005-05-30  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add application/x-shorten now that
	xine-lib can play Shorten lossless audio files

2005-05-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_unrealize):
	* src/backend/bacon-video-widget.h: add the new BVW_ERROR_EMPTY_FILE
	error message, and use it for when we tried to play an empty file
	(Closes: #164738)

2005-05-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_zoom), (bacon_video_widget_get_zoom):
	Don't crash when trying to get or set the zoom level and the stream
	isn't setup yet
	* src/totem.c: (totem_action_drop_files),
	(on_always_on_top1_activate), (video_widget_create):
	Reset the zoom in the Totem UI to 100 to disable the "Zoom Reset"
	button in the View menu

2005-05-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Move the repeat and shuffle menu items to the
	Edit menu instead (Closes: #300472)

2005-05-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_set_show_cursor):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_show_cursor):
	* src/backend/video-utils.c:
	(totem_gdk_window_set_invisible_cursor), (totem_create_symlinks),
	(totem_display_is_local):
	* src/backend/video-utils.h:
	* src/totem.c: (on_always_on_top1_activate): remove
	totem_gdk_window_set_always_on_top and use the GTK+ provided
	gtk_window_set_keep_above instead, namespace the invisible cursor
	function properly
