@@ -1,3 +1,9 @@
+2005-06-06  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-xine.c:
+	(bacon_video_widget_open_with_subtitle): Fix detection of still images
+	with newer versions of xine-lib
+
 2005-06-05  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-mozilla-plugin.cpp:
